--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "cryptokitties-contrib": "0.0.1",
     "ethers-meow": "0.0.3",
     "minimist": "^1.2.0",
+    "mocha": "^4.0.1",
     "mongodb": "^3.0.0-rc0",
+    "mongoose": "^4.13.6",
+    "nodemon": "^1.12.5",
     "request": "^2.83.0"
   },
   "devDependencies": {},
